direction correction overlap error and scoreborad added

--- a/style.css
+++ b/style.css
@@ -23,3 +23,15 @@
 #head{
     background-color: green;
 }
+
+#score{
+    
+    position: absolute;
+    top: 100px;
+    right: 100px;
+}
+#hiscore{
+    position: absolute;
+    top:80px;
+    right: 100px;
+}
